Added transparency for other entities

--- a/src/main/resources/more-space-sodium.mixins.json5
+++ b/src/main/resources/more-space-sodium.mixins.json5
@@ -6,7 +6,8 @@
 	"compatibilityLevel": "JAVA_${java}",
 	"mixins": [],
 	"client": [
-		"ItemRendererMixinMixin"
+		"ItemRendererMixinMixin",
+		"ModelBlockRendererMixinMixin"
 	],
 	"injectors": {
 		"defaultRequire": 1
