--- a/gradle.properties
+++ b/gradle.properties
@@ -11,11 +11,11 @@ org.gradle.parallel=true
 # Mod Properties
 data.mod_id = more-space
 data.mod_name = More Space
-data.mod_version = 1.0.0
+data.mod_version = 1.1.0
 data.mod_group = net.lopymine.ms
 data.mod_maven_group = net.lopymine
 
-data.mod_description = Client-Side Fabric mod which gradually hides closest players to you.
+data.mod_description = Client-Side Fabric mod which gradually hides closest players (and other entities) to you.
 data.mod_authors = LopyMine
 data.mod_license = LGPL-3.0
 
