Optimized Mixins & Fixed overlapping two translucent entities

--- a/src/main/resources/more-space-sodium.mixins.json5
+++ b/src/main/resources/more-space-sodium.mixins.json5
@@ -6,8 +6,8 @@
 	"compatibilityLevel": "JAVA_${java}",
 	"mixins": [],
 	"client": [
-		"ItemRendererMixinMixin",
-		"ModelBlockRendererMixinMixin"
+//		"ItemRendererMixinMixin",
+//		"ModelBlockRendererMixinMixin"
 	],
 	"injectors": {
 		"defaultRequire": 1
