--- a/gradle.properties
+++ b/gradle.properties
@@ -36,6 +36,7 @@ build.java = [VERSIONED]
 # Additional Dependencies, "dep." is important
 dep.yacl = [VERSIONED]
 dep.modmenu = [VERSIONED]
+dep.sodium = [VERSIONED]
 
 # # # # # # # # # # # # # #
 #  Publication Properties #
