--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ org.gradle.parallel=true
 # Mod Properties
 data.mod_id = transparent-entities
 data.mod_name = Transparent Entities
-data.mod_version = 1.2.0
+data.mod_version = 1.2.1
 data.mod_group = net.lopymine.te
 data.mod_maven_group = net.lopymine
 
@@ -25,7 +25,7 @@ base.mixin_squared = 0.2.0
 
 # Multi-Versions Properties
 # Verified version: 1.20 1.20.1 1.20.2 1.20.3 1.20.4 1.20.5 1.20.6 1.21 1.21.1 1.21.2 1.21.3
-multi_versions = 1.21 1.21.1 1.21.2 1.21.3 1.21.4
+multi_versions = 1.21 1.21.1 1.21.2 1.21.3 1.21.4 1.21.5
 
 # Build Dependencies
 build.yarn = [VERSIONED]
@@ -45,7 +45,7 @@ dep.sodium = [VERSIONED]
 # Mod Loaders
 loaders = fabric
 # Publication Versions from `ROOT/libs/mod-version-here.jar` or from `ROOT/versions/MC_VERSION/build/libs/...` if not present in root
-publication_versions = 1.21 1.21.1 1.21.2 1.21.3 1.21.4
+publication_versions = 1.21.1
 # Version Type [RELEASE, BETA, ALPHA]
 version_type = RELEASE
 
