--- a/gradle.properties
+++ b/gradle.properties
@@ -29,7 +29,7 @@ multi_versions = 1.21 1.21.1 1.21.2 1.21.3 1.21.4 1.21.5
 
 # Build Dependencies
 build.yarn = [VERSIONED]
-build.fabric_loader = 0.16.7
+build.fabric_loader = 0.16.10
 build.fabric_api = [VERSIONED]
 build.java = [VERSIONED]
 
@@ -45,7 +45,7 @@ dep.sodium = [VERSIONED]
 # Mod Loaders
 loaders = fabric
 # Publication Versions from `ROOT/libs/mod-version-here.jar` or from `ROOT/versions/MC_VERSION/build/libs/...` if not present in root
-publication_versions = 1.21.1
+publication_versions = 1.21 1.21.1 1.21.2 1.21.3 1.21.4 1.21.5
 # Version Type [RELEASE, BETA, ALPHA]
 version_type = RELEASE
 
