Micro 1.2.2 Update - Updated to 1.21.6–7 - Added option for hiding a player's head when they are wearing something

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,13 +11,13 @@ org.gradle.parallel=true
 # Mod Properties
 data.mod_id = transparent-entities
 data.mod_name = Transparent Entities
-data.mod_version = 1.2.1
+data.mod_version = 1.2.2
 data.mod_group = net.lopymine.te
 data.mod_maven_group = net.lopymine
 
 data.mod_description = Client-Side Fabric mod which gradually hides closest players (and other entities) to you.
 data.mod_authors = LopyMine
-data.mod_license = LGPL-3.0
+data.mod_license = CC BY-ND 4.0
 
 # Main Dependencies
 base.lombok_version = 1.18.32
@@ -25,7 +25,7 @@ base.mixin_squared = 0.2.0
 
 # Multi-Versions Properties
 # Verified version: 1.20 1.20.1 1.20.2 1.20.3 1.20.4 1.20.5 1.20.6 1.21 1.21.1 1.21.2 1.21.3
-multi_versions = 1.21 1.21.1 1.21.2 1.21.3 1.21.4 1.21.5
+multi_versions = 1.21 1.21.1 1.21.2 1.21.3 1.21.4 1.21.5 1.21.6 1.21.7
 
 # Build Dependencies
 build.yarn = [VERSIONED]
@@ -44,8 +44,8 @@ dep.sodium = [VERSIONED]
 
 # Mod Loaders
 loaders = fabric
-# Publication Versions from `ROOT/libs/mod-version-here.jar` or from `ROOT/versions/MC_VERSION/build/libs/...` if not present in root
-publication_versions = 1.21 1.21.1 1.21.2 1.21.3 1.21.4 1.21.5
+# Versions Specifications
+versions_specifications = 1.21 1.21.1 1.21.2 1.21.3 1.21.4 1.21.5 1.21.6 1.21.7
 # Version Type [RELEASE, BETA, ALPHA]
 version_type = RELEASE
 
