--- a/src/main/resources/transparent-entities-sodium.mixins.json5
+++ b/src/main/resources/transparent-entities-sodium.mixins.json5
@@ -6,8 +6,7 @@
 	"compatibilityLevel": "JAVA_${java}",
 	"mixins": [],
 	"client": [
-		"ItemRendererMixinMixin",
-		"ModelBlockRendererMixinMixin"
+		"EntityVertexMixin"
 	],
 	"injectors": {
 		"defaultRequire": 1
