A lot of new stuff - Fixed more compatibility with other mods and resource packs - Added a way to manage transparent by xz and y distance separately - Added support for hiding particles and entity's names - Fixed YACL Configuration Screen Buttons

--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,12 @@ mossyDependencies {
 	lombok = prop("base.lombok_version")
 	fabricApi = prop("build.fabric_api")
 	fabricLoader = prop("build.fabric_loader")
+
+	additional {
+
+		//override("modCompileOnly", "sodium")
+
+	}
 }
 
 mossyResources {
