--- a/src/main/resources/transparent-entities-sodium.mixins.json5
+++ b/src/main/resources/transparent-entities-sodium.mixins.json5
@@ -6,7 +6,7 @@
 	"compatibilityLevel": "JAVA_${java}",
 	"mixins": [],
 	"client": [
-		"EntityVertexMixin"
+		"ColorAttributeMixin"
 	],
 	"injectors": {
 		"defaultRequire": 1
